(updated) created some seeder class created some migration class modified some code