@@ -1,9 +1,7 @@
 package database.factory;
 
 import net.datafaker.Faker;
-
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public abstract class Factory<T> {
@@ -12,10 +10,9 @@ public abstract class Factory<T> {
 
     public abstract T definition();
 
-    public List<T> create(int count)
-    {
+    public List<T> create(int count) {
         return Stream.generate(this::definition)
                 .limit(count)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
